# asl-datasets-gen

./: .fuse_hidden00007d1500000001  .gitignore  README.md  main.py  metadata_reader.py  pyproject.toml  wk-asl-datasets-gen.code-workspace
.github/workflows/: build.yml  code-quality.yml
cluster/tasks/: asllvd-skeleton-pos.slurm  asllvd-skeleton.slurm
config/: README.md  asl-phono.yaml  asl-skeleton3d.yaml  config-cluster-debug.yaml  config-cluster-pos.yaml  config-cluster-pre.yaml  config-cluster.yaml  config.yaml  debug.yaml  preproc-27.yaml  template.yaml
config/.old/: config-cluster-debug.yaml  config-cluster-pos.yaml  config-cluster-pre.yaml  config-cluster.yaml
constant/: __init__.py  constants.py  keypoints_coco.py
extractor/: __init__.py  phono_extractor.py
feeder/: normalizer_feeder.py  tools.py
processor/: __init__.py  downloader.py  filter.py  holdouter.py  metadator.py  normalizer.py  phonologyzer.py  processor.py  segmenter.py  skeletor.py
processor/sl/: video_preprocessor.py
processor/sl/preprocessor/: __init__.py  downloader.py  filter.py  gendata.py  gendata_feeder.py  holdout.py  holdouter.py  io.py  keypoint.py  normalizer.py  openpose.py  preprocessor.py  segmenter.py  skeletor.py  splitter.py
processor/sl/preprocessor/feeder/: __init__.py  normalizer_feeder.py
reader/: __init__.py  json_reader.py
tools/: get_models.sh  sl_gendata.py
tools/utils/: __init__.py  args_util.py  openpose.py  parser.py  template.json  util.py  utils.py
utils/: __init__.py  args_reader.py  utils.py
~/work/asllvd-skeleton/dataset/: config.yaml
