[tool.poetry]
name = "asllvd-skeleton-creator"
version = "0.1.0"
description = ""
authors = ["Cleison Amorim <cca5@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "~3.7"
commons-python = { git = "https://github.com/amorim-cleison/commons-python.git", branch = "develop" }
numpy = "==1.19.3"
pandas = "^1.1.3"
ffmpy = "^0.2.3"
sklearn = "^0.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
yapf = "^0.30.0"
pytest = "^6.1.1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
